<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/profile_neighbour"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/backbutton"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_back"
        android:elevation="50dp"
        android:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        android:onClick="BackButton"
        />

    <ImageView
        android:id="@+id/profilepicture"
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:scaleType="centerCrop"
        android:src="@drawable/droidgirl" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favbuttonclicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilepicture"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-15dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/ic_fav"
        app:borderWidth="0dp"
        app:elevation="25dp"
        app:fabSize="normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favbuttonunclicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilepicture"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-15dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/ic_fav2"
        app:borderWidth="0dp"
        app:elevation="25dp"
        app:fabSize="normal" />


    <TextView
        android:id="@+id/name"
        android:layout_below="@+id/backbutton"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="-19dp"
        android:text="Caroline"
        android:textColor="#ffffff"
        android:textSize="30dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/topcardview"
        android:layout_width="391dp"
        android:layout_height="166dp"
        android:layout_below="@+id/profilepicture"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/nametitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Caroline"
            android:textColor="#696969"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nametitle"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:text="Saint Pierre du Mont à 5km" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="90dp"
            android:text="+33 6 86 57 90 14" />

        <TextView
            android:id="@+id/network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="130dp"
            android:text="www.facebook.fr/caroline" />

        <ImageView
            android:id="@+id/locationpicture"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@id/location"
            android:src="@drawable/ic_location" />

        <ImageView
            android:id="@+id/phonepicture"
            android:layout_width="21dp"
            android:layout_height="31dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="85dp"
            android:layout_toLeftOf="@id/phone"
            android:src="@drawable/ic_phone" />

        <ImageView
            android:id="@+id/networkpicture"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="127dp"
            android:layout_toLeftOf="@id/network"
            android:src="@drawable/ic_social" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/bottomcardview"
        android:layout_below="@+id/topcardview"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="21dp">

        <TextView
            android:id="@+id/infotitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A propos de moi"
            android:textColor="#696969"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="Bonjour ! Je souhaiterai faire de la marche nordique.
            Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner ! J'aime les jeux de cartes tels la belote et le tarot." />

    </android.support.v7.widget.CardView>

</RelativeLayout>